kl-demo-service-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kl-demo
  labels:
    name: kl-demo
