kl-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kldemo-customers-web-deployment
  labels:
    app: kldemo
spec:
  selector:
    matchLabels:
      app: kldemo-customers-web
  replicas: 1
  template:
    metadata:
      labels:
        app: kldemo-customers-web
    spec:
      containers:
      - name: kldemo-customers-web
        image: registry.codegarage.ru/alexander/kubernetesloadbalancing:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kldemo-nginx-deployment
  labels:
    app: kldemo
spec:
  selector:
    matchLabels:
      app: kldemo-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: kldemo-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/proxy.conf
              subPath: proxy.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: proxy.conf
                path: proxy.conf
