kl-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kldemo-nginx
  labels:
    app: kldemo
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 80
  selector:
    app: kldemo-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: kldemo-customers-web
  labels:
    app: kldemo
spec:
  type: ClusterIP
  selector:
    app: kldemo-customers-web
  ports:
    - port: 8080
