kl-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kldemo-nginx-ingress
spec:
  defaultBackend:
    service:
      name: kldemo-nginx
      port:
        number: 80
